force-app/main/default/objects/Follow_Up__c/Follow_Up__c.object-meta.xml
<CustomObject>
    <label>Follow Up</label>
    <nameField>
        <displayFormat>FLP-{000000}</displayFormat>
        <label>Follow-Up ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follow Ups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>