force-app/main/default/objects/Follow_Up__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner responsible for execution</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Follow Ups</relationshipLabel>
    <relationshipName>Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>