force-app/main/default/objects/Follow_Up__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Target completion date</description>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>