force-app/main/default/objects/Follow_Up__c/fields/Healthcare_Provider__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Provider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Associated doctor</description>
    <label>Healthcare Provider</label>
    <referenceTo>Healthcare_Provider__c</referenceTo>
    <relationshipLabel>Follow Ups</relationshipLabel>
    <relationshipName>Follow_Ups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>