force-app/main/default/objects/Follow_Up__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Action item instructions</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>