force-app/main/default/objects/Follow_Up__c/fields/Related_Visit__c.field-meta.xml
<CustomField>
    <fullName>Related_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent field visit</description>
    <label>Related Visit</label>
    <referenceTo>Doctor_Visit__c</referenceTo>
    <relationshipLabel>Follow Ups</relationshipLabel>
    <relationshipName>Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>